# chat

./: CMakeLists.txt  CMakePresets.json  Dockerfile.devcontainer  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-devcontainer-cached.yml  build-package-cached.yml
client/: CMakeLists.txt
client/qt/: CMakeLists.txt  main.cpp  resources.qrc
client/qt/forms/: connectwidget.ui  loginscreen.ui  mainwindow.ui
client/qt/include/backend/: backend.h
client/qt/include/ui/: connectwidget.h  loginscreen.h  mainwindow.h
client/qt/qml/: panel.qml
client/qt/src/: main.cpp
client/qt/src/backend/: backend.cpp
client/qt/src/ui/: connectwidget.cpp  loginscreen.cpp  mainwindow.cpp
client/wx/: CMakeLists.txt
cmake/: AppImage.cmake  LinuxDeployAppImage.cmake
scripts/: create_vcpkg_cache.py  relink_shared_libs.py  strip_vcpkg_debug_symbols.sh
triplets/: x64-linux-mixed-explicit.cmake  x64-linux.cmake
vcpkg-overlays/wxwidgets/: vcpkg.json
